webサイト版のRSSリーダの作成

--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <html>
-    <head>
-        <title>RSSリーダー</title>
-        <meta charset="utf-8">
-        <script type = "text/javascript" src = "https://www.google.com/jsapi"></script>
-        <script type = "text/javascript" src = "./feed.js"></script>
-    </head>
-    
-    <body>
+
+<head>
+    <title>RSSリーダー</title>
+    <!--文字コードに関するメタデータ-->
+    <meta charset="utf-8">
+    <!-- Google Fonts -->
+    <link rel="stylesheet" href="https://www.google.com/fonts#ChoosePlace:select">
+    <!-- CSS Reset -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
+    <!-- Milligram CSS minified -->
+    <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=PT+Sans+Caption' rel='stylesheet' type='text/css'>
+    <!--内部cssの読み込み-->
+    <!--<link rel="stylesheet" href="./style.css">-->
+    <!--rssリーダのapiに関するメタデータ  -->
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script type="text/javascript" src="./feed.js"></script>
+</head>
+
+<body>
+    <center>
         <h1>RSS Reader</h1>
-        <div id = "feed">最新情報</div>
-    </body>
+        <div id="feed">最新情報</div>
+    </center>
+</body>
+
 </html>
