--- a/BlankCordovaApp1/www/index.html
+++ b/BlankCordovaApp1/www/index.html
@@ -5,7 +5,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
 
-    <title>Onsen UI</title>
+    <title>ちょこっとサイト</title>
 
     <!-- JS dependencies -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.js"></script>
@@ -21,56 +21,22 @@
     <link rel="stylesheet" href="lib/onsen/css/onsenui.css">
     <link rel="stylesheet" href="lib/onsen/css/onsen-css-components.css">
     <link rel="stylesheet" href="lib/onsen/css/onsenui.css">
-    <!--<link rel="stylesheet" href="styles/app.css" />
-    <link rel="stylesheet" href="styles/onsen-css-components-blue-basic-theme.css">-->
-
+    <link rel="stylesheet" href="css/style.css" />
     <!-- App init -->
 
-    <style>
-        .item {
-            padding: 10px;
-            line-height: 1;
-        }
-
-        .item-thum {
-            background-color: #ccc;
-            width: 50px;
-            height: 50px;
-            border-radius: 4px;
-        }
-
-        .item-title {
-            font-size: 15px;
-            font-weight: 500;
-        }
-
-        .item-desc {
-            font-size: 14px;
-            color: #666;
-            line-height: 1.3;
-            margin: 4px 0 0 0;
-            padding: 0 30px 0 0;
-        }
-
-        .item-label {
-            font-size: 12px;
-            color: #999;
-            float: right;
-        }
-    </style>
 </head>
 
 <body ng-controller="AppController">
     <!-- App layout -->
     <ons-navigator>
         <ons-page>
-            <ons-toolbar>
-                <div class="center">RSS Reader</div>
+            <ons-toolbar modifier="top">
+                <div class="center">ちょこっとサイト</div>
             </ons-toolbar>
 
-            <ons-list-item modifier="chevron" ng-click="feedLoad()">
+            <ons-list-item modifier="chevron" ng-init="feedLoad()" ng-click="feedLoad()">
                 <ons-icon icon="ion-chatboxes" fixed-width="true" style="color: #ccc"></ons-icon>
-                Feed Load
+                サイト一覧
             </ons-list-item>
 
             <ons-list>
@@ -78,6 +44,7 @@
                     <ons-row>
                         <ons-col>
                             <header>
+                                <!--入力したものを即時繁栄-->
                                 <span class="item-title">{{rssitem.title}}</span>
                             </header>
                         </ons-col>
